--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <center>
         <h1>
-            Smart Photo Album
+            Smart Photo Album (Changed title 123)
         </h1>
         
         <div class="bar">
